Added Generic Error response (#13)
